test/fail/Issue1078/A.agda
module Issue1078.A where

open import Common.Level using (Level)
